<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/principal"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar_configuracion"
            android:layout_height="wrap_content"
            app:title="Otros"/>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_medium"
        android:padding="10dp"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textColor="@color/gradient_start_color"
        android:text="@string/contactanos"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/correo_contacto"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_medium"
        android:padding="10dp"
        android:textColor="@color/gradient_start_color"
        android:textSize="20dp"
        android:lineSpacingExtra="20dp"
        android:textAllCaps="true"
        android:text="@string/copyright"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="20dp"
        android:fontFamily="@font/raleway_medium"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        android:text="@string/text_1_copy"/>

    <TextView
        android:layout_width="match_parent"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:paddingLeft="10dp"
        android:text="@string/text_2_copy"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/raleway_medium"
        android:padding="10dp"
        android:textColor="@color/gradient_start_color"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:text="@string/version_serial"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:text="@string/text_version"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:orientation="horizontal"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/terminos"
        android:fontFamily="@font/raleway_medium"
        android:padding="10dp"
        android:textColor="@color/gradient_start_color"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:text="@string/terminos"/>
</LinearLayout>