<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/principal"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar_ayuda"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/list"
            android:layout_height="wrap_content"
            app:title="Ayuda"/>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/como_se_consigue_puntos"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_medium"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:text="Como se Consigue los puntos?"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textSize="15dp"
            android:text="@string/como_1_1"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textSize="15dp"
            android:text="@string/como_2_2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/como_se_recoge"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="20dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_medium"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:text="Como se realiza el Recojo de sus Aparatos?"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textSize="15dp"
            android:text="@string/como_"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textSize="15dp"
            android:text="@string/como_2"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lista_ayuda"/>
</LinearLayout>