<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_calendar">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_recojo"
                    android:fontFamily="@font/raleway_medium"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siguiente"
                        android:textColor="@color/black"
                        android:id="@+id/dia_recojo"
                        android:fontFamily="@font/raleway"
                        android:textSize="20dp"
                        />
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_marginLeft="10dp"
                        android:layout_height="32dp"
                        android:src="@drawable/transport"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="@font/raleway_medium"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:textSize="20dp"
                    android:text="@string/titulo_calendario"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:padding="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="25dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:elevation="20dp"
                    app:cardCornerRadius="20dp">
                    <com.applandeo.materialcalendarview.CalendarView
                        android:layout_width="match_parent"
                        android:id="@+id/calendario"
                        android:layout_height="wrap_content"
                        app:eventsEnabled="true"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:paddingTop="-15dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        tools:ignore="UselessParent">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@drawable/icon_basura"/>
                            <TextView
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/raleway_medium"
                                android:autoSizeTextType="uniform"
                                android:text="@string/recolectado"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:orientation="horizontal">
                            <ImageView
                                android:layout_width="32dp"
                                android:layout_height="32dp"
                                android:src="@drawable/transport"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:fontFamily="@font/raleway_medium"
                                android:text="@string/por_recolectar"
                                />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginLeft="75dp"
                        android:src="@drawable/check"/>
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_medium"
                        android:text="@string/acopio"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:padding="20dp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_centros_acopio"
                    android:fontFamily="@font/raleway_medium"
                    android:textSize="20dp"/>
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:id="@+id/lista_centros"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_gravity="center"
                    android:elevation="20dp"
                    app:cardCornerRadius="10dp"
                    android:id="@+id/btn_show_more_centros_calendar">
                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/imagen_more_centros"
                            android:src="@drawable/more_plus"/>
                       <TextView
                           android:padding="7.5dp"
                           android:id="@+id/texto_more_centros"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/mostrar_mas"/>
                   </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>