<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents"
        android:orientation="vertical">
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="match_parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_height="50dp"
                android:text="@string/descuentos"
                android:textColor="@color/white"
                android:id="@+id/btn_empresas_descuentos"
                android:backgroundTint="@color/principal"
                android:paddingLeft="10dp"
                app:iconTint="@color/black"
                app:icon="@drawable/descuentos"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_margin="0dp"
                android:id="@+id/btn_mis_descuentos"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:layout_height="50dp"
                android:text="@string/mis_descuentos"
                android:textColor="@color/white"
                android:paddingLeft="10dp"
                android:backgroundTint="@color/gradient_start_color"
                app:icon="@drawable/mis_descuentos" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/pagers"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="20dp"
                   android:layout_marginLeft="20dp"
                   android:textColor="@color/white"
                   android:fontFamily="@font/raleway_medium"
                   android:textStyle="bold"
                   android:text="@string/titulo_farmacia"/>
               <androidx.viewpager.widget.ViewPager
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:id="@+id/lista_farmacias_boticas"/>
               <com.google.android.material.tabs.TabLayout
                   android:layout_width="wrap_content"
                   android:layout_marginTop="-20dp"
                   android:layout_marginLeft="40dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/tab_indicator_lista_farmacias_boticas"
                   app:tabBackground="@drawable/indicator_selector"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="20dp"
                   android:textColor="@color/white"
                   android:textStyle="bold"
                   android:fontFamily="@font/raleway_medium"
                   android:layout_marginLeft="20dp"
                   android:text="@string/titulo_bodega"/>
               <androidx.viewpager.widget.ViewPager
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:id="@+id/lista_bodegas"/>
               <com.google.android.material.tabs.TabLayout
                   android:layout_width="wrap_content"
                   android:layout_marginTop="-20dp"
                   android:layout_marginLeft="40dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/tab_indicator_lista_bodegas"
                   app:tabBackground="@drawable/indicator_selector"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="20dp"
                   android:textStyle="bold"
                   android:textColor="@color/white"
                   android:fontFamily="@font/raleway_medium"
                   android:layout_marginLeft="20dp"
                   android:text="@string/titulo_restaurantes"/>
               <androidx.viewpager.widget.ViewPager
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:id="@+id/lista_restaurantes"/>
               <com.google.android.material.tabs.TabLayout
                   android:layout_width="wrap_content"
                   android:layout_marginTop="-20dp"
                   android:layout_marginLeft="40dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/tab_indicator_restaurantes"
                   app:tabBackground="@drawable/indicator_selector"/>
           </LinearLayout>
       </LinearLayout>
    </ScrollView>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/lista_mis_descuentos"
        />
</LinearLayout>