<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
   <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/refresh_home">
       <ScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:paddingTop="0dp"
                   android:gravity="center"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/Sabias"
                       android:textSize="20dp"
                       android:fontFamily="@font/raleway_medium"
                       />
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/idea"
                       tools:ignore="ContentDescription" />
               </LinearLayout>
               <androidx.viewpager.widget.ViewPager
                   android:layout_width="match_parent"
                   android:layout_height="250dp"
                   android:id="@+id/lista_conocimientos"/>
               <com.google.android.material.tabs.TabLayout
                   android:layout_width="wrap_content"
                   android:layout_marginTop="-20dp"
                   android:layout_marginLeft="40dp"
                   android:layout_height="wrap_content"
                   android:id="@+id/tab_indicator_conocimientos"
                   app:tabBackground="@drawable/indicator_selector"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:fontFamily="@font/raleway_medium"
                   android:text="@string/categorias"/>
               <androidx.recyclerview.widget.RecyclerView
                   android:layout_width="match_parent"
                   android:layout_height="150dp"
                   android:scrollbarAlwaysDrawHorizontalTrack="true"
                   android:id="@+id/lista_categorias"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="20dp"
                   android:layout_marginTop="10dp"
                   android:text="@string/beneficios"
                   />
               <!--1530dp-->
               <ListView
                   android:layout_width="wrap_content"
                   android:layout_height="1530dp"
                   android:id="@+id/lista_beneficios" />
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center"
                   android:layout_gravity="center"
                   android:orientation="horizontal">
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:textStyle="bold"
                       android:textSize="15dp"
                       android:text="@string/razones"
                       android:layout_marginLeft="20dp"/>
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_margin="10dp"
                       android:layout_height="wrap_content"
                       android:src="@drawable/question"/>
               </LinearLayout>
               <androidx.recyclerview.widget.RecyclerView
                   android:layout_width="match_parent"
                   android:layout_height="175dp"
                   android:scrollbarAlwaysDrawHorizontalTrack="true"
                   android:id="@+id/lista_razones"
                   />
           </LinearLayout>
       </ScrollView>
   </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>